@@ -1,7 +1,7 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.434 2005/10/23 22:20:14 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.435 2005/10/23 23:51:52 agaffney Exp $
 
 *GLI-0.3 (17 Oct 2005)
 
@@ -14,6 +14,11 @@
   look for actual files in html/
   src/net/html:
   new template
+  src/GLIUtility.py:
+  added parse_vdb_contents()
+  src/GLIArchitectureTemplate.py:
+  added copy_pkg_to_chroot()
+  added debug code to dynamic-stage3
 
   22 Oct 2005; Preston Cody <codeman@gentoo.org>
   webgli initial bootloader support + changed make.conf.
